@@ -3,6 +3,8 @@ $Id$
 version ? (????-??-??):
 
   - in Mailing added replacement variables (alec)
+  - in Nodes List added network and status filtering (alec)
+  - in Nodes -> Print added network filter (alec)
 
 version 1.7.1 Swarog <A.L.E.C's Nightmare> (2005-06-27):
 
